# tmachine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_memory_layers.py
examples/: basic_edit.py
scripts/: create_tables.py
src/tmachine/: __init__.py
src/tmachine/ai/: __init__.py  image_editor.py  voice_pipeline.py
src/tmachine/api/: __init__.py  app.py  models.py  utils.py  worker.py
src/tmachine/api/routes/: __init__.py  layers.py  mutate.py  proposals.py  render.py
src/tmachine/core/: __init__.py  delta_engine.py  renderer.py  splat_mutator.py
src/tmachine/db/: __init__.py  models.py  session.py
src/tmachine/io/: __init__.py  ply_handler.py
src/tmachine/utils/: __init__.py  camera.py
tests/: conftest.py  test_api_routes.py  test_camera.py  test_db_integration.py  test_delta_engine.py  test_ply_handler.py  test_splat_mutator.py  test_utils.py  test_voice_pipeline.py  test_worker_locks.py
