[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tmachine"
version = "0.1.0"
description = "Agnostic 3D Gaussian Splat mutation engine: render → diff → backprop."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "tmachine contributors" },
]
keywords = ["3d gaussian splatting", "neural rendering", "differentiable rendering", "nerf", "gsplat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0.0",
    "gsplat>=1.0.0",
    "plyfile>=0.9",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.urls]
"Homepage"    = "https://github.com/abendrothj/tmachine"
"Repository"  = "https://github.com/abendrothj/tmachine"
"Bug Tracker" = "https://github.com/abendrothj/tmachine/issues"


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "httpx>=0.27.0",          # TestClient transport
]

# pip install -e ".[ai]"
ai = [
    "diffusers>=0.27.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "openai-whisper>=20231117",
    "openai>=1.0.0",
]

# pip install -e ".[api]"
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "filelock>=3.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
]

# pip install -e ".[full]"
full = ["tmachine[ai,api]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tmachine = ["py.typed"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
markers     = [
    "gpu: marks tests that require CUDA (deselect with -m 'not gpu')",
]

[tool.coverage.run]
source = ["tmachine"]
omit   = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
