[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tmachine"
version = "0.1.0"
description = "Agnostic 3D Gaussian Splat mutation engine: render → diff → backprop."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "tmachine contributors" },
]
keywords = ["3d gaussian splatting", "neural rendering", "differentiable rendering", "nerf", "gsplat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0.0,<3",
    "gsplat>=1.0.0,<2",
    "plyfile>=0.9",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.urls]
"Homepage"    = "https://github.com/abendrothj/tmachine"
"Repository"  = "https://github.com/abendrothj/tmachine"
"Bug Tracker" = "https://github.com/abendrothj/tmachine/issues"


[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "httpx>=0.27.0",          # TestClient transport
]

# pip install -e ".[ai-image]"  — InstructPix2Pix / SDXL image editing
#   transformers + accelerate are not imported directly but are required at
#   runtime by diffusers' from_pretrained pipeline.
#   lpips pulls in torchvision; required only when DeltaEngine(lpips_weight>0).
ai-image = [
    "diffusers>=0.27.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "lpips>=0.1.4",
]

# pip install -e ".[ai-voice]"  — Whisper STT + LLM prompt extraction
#   openai is only used for the default LLM extraction step; pass llm_fn= to bypass it.
ai-voice = [
    "openai-whisper>=20231117",
    "openai>=1.0.0,<2",
]

# pip install -e ".[ai]"  — both image and voice (convenience alias)
ai = ["tmachine[ai-image,ai-voice]"]

# pip install -e ".[db]"  — SQLAlchemy models + Alembic migrations only
#   Use this when embedding tmachine models into your own application's DB stack.
#   Does NOT include a database driver — install your preferred adapter separately,
#   e.g.:  psycopg2-binary  (Postgres, dev)  |  psycopg2  (Postgres, prod)
#           asyncpg  (Postgres async)         |  pymysql  (MySQL/MariaDB)
db = [
    "sqlalchemy>=2.0.0,<3",
    "alembic>=1.13.0",
]

# pip install -e ".[server]"  — full FastAPI + Celery API server
#   redis is provided transitively by celery[redis] — not listed separately.
server = [
    "tmachine[db]",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "celery[redis]>=5.3.0",
    "python-multipart>=0.0.9",
    "filelock>=3.13.0",
    "python-dotenv>=1.0.0",
]

# pip install -e ".[api]"  — backwards-compatible alias for [server]
api = ["tmachine[server]"]

# pip install -e ".[full]"
full = ["tmachine[ai-image,ai-voice,server]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tmachine = ["py.typed"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"
markers     = [
    "gpu: marks tests that require CUDA (deselect with -m 'not gpu')",
]

[tool.coverage.run]
source = ["tmachine"]
omit   = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
